--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
   height: 35vw;
-  margin: 30px;
+  margin: 30px 0;
   background-image: url("../../../public/Header_1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -32,7 +32,7 @@
 .header-content button {
   background-color: transparent;
   color: white;
-  border: 1px solid white;
+  border: 2px solid white;
   border-radius: 50px;
   padding: 10px 30px;
   font-size: max(1.5vw, 12px);
